js/js.translator/testData/incremental/invalidation/openClassOpenMethods/lib1/ClassB.2.kt
open class B : A {
    override fun test() = 1

    override val testProp: Int = 3
}
